# devsql

./: Cargo.toml  README.md  dist-workspace.toml
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
crates/ccql/: .gitignore  Cargo.toml  README.md
crates/ccql/.pensieve/: pensieve.db
crates/ccql/npm/: README.md  package.json
crates/ccql/npm/scripts/: install.js
crates/ccql/src/: error.rs  lib.rs  main.rs
crates/ccql/src/cli/: commands.rs  mod.rs  output.rs
crates/ccql/src/config/: mod.rs
crates/ccql/src/datasources/: codex_history.rs  history.rs  mod.rs  stats.rs  todo.rs  transcript.rs
crates/ccql/src/dedup/: mod.rs
crates/ccql/src/models/: history.rs  mod.rs  stats.rs  todo.rs  transcript.rs
crates/ccql/src/query/: mod.rs
crates/ccql/src/search/: mod.rs
crates/ccql/src/sql/: composite_storage.rs  mod.rs  safety.rs
crates/ccql/src/streaming/: mod.rs
crates/devsql/: Cargo.toml
crates/devsql/src/: engine.rs  error.rs  lib.rs  main.rs
crates/vcsql/: .gitignore  CHANGELOG.md  Cargo.toml
crates/vcsql/.github/workflows/: ci.yml  release.yml
crates/vcsql/npm/: .npmignore  README.md  package.json
crates/vcsql/npm/scripts/: install.js
crates/vcsql/src/: error.rs  lib.rs  main.rs
crates/vcsql/src/git/: repository.rs
crates/vcsql/src/providers/: branches.rs  config.rs  diff_files.rs  hooks.rs  notes.rs  reflog.rs  refs.rs  remotes.rs  stashes.rs  submodules.rs  tags.rs  worktrees.rs
crates/vcsql/src/sql/: engine.rs  schema.rs
crates/vcsql/tests/: cli.rs  integration.rs
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: query.md
plugin/hooks/: hooks.json
plugin/scripts/: ensure-devsql.sh
plugin/skills/devsql-querying/: SKILL.md
